--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "repository": "https://github.com/Thinkful-Ed/blog-app-mongoose-challenge-solution",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test" : "mocha"
   },
   "dependencies": {
     "express": "^4.16.3",
     "mongoose": "^5.0.12",
-    "morgan": "^1.9.0",
+    "morgan": "^1.9.1",
     "uuid": "^3.2.1"
   },
   "keywords": [
