--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test" : "mocha"
+    "test": "mocha"
   },
   "dependencies": {
     "express": "^4.16.3",
@@ -18,5 +18,11 @@
     "node",
     "express"
   ],
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
+    "faker": "^4.1.0",
+    "mocha": "^5.2.0"
+  },
   "license": "MIT"
 }
